# little-one

./: .editorconfig  .gitignore  AUDIO_FORMAT.md  CATS.md  README.md  SPRITE_FORMAT.md  STATUS.md  build.sh  keystore.properties.example  release.keystore  settings.gradle.kts
.github/workflows/: android-build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
design/: boar.json  player.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: config.h  enemy_config.c  enemy_config.h  entity.c  entity.h  entity_config.c  entity_config.h  game.c  game.h  game_settings.h  generated_sprite.c  generated_sprite.h  input.c  input.h  main.c  obstacle_config.c  obstacle_config.h  platform_android.c  player_config.c  player_config.h  renderer.c  renderer.h
src/assets/animations/: bat_death_spin_drop.anim.json  bat_flight_jitter.anim.json  bat_flight_twitch.anim.json  bird_death_camera_hit.anim.json  bird_death_drop.anim.json  boar_death_tumble.anim.json  boar_walk.anim.json  damage.anim.json  death.anim.json  enemy_attack.anim.json  fall.anim.json  fly.anim.json  flying_attack.anim.json  flying_death.anim.json  idle.anim.json  jump.anim.json  land.anim.json  obstacle_attack.anim.json  obstacle_break.anim.json  ork_death_knockback.anim.json  ork_walk.anim.json  player_damage.anim.json  player_death_fall.anim.json  predator_idle.anim.json  predator_snap_idle.anim.json  predator_sway.anim.json  rat_death_flip.anim.json  rat_walk.anim.json  smash.anim.json  spawn.anim.json  walk.anim.json
src/assets/fonts/: vector_16_basic.font.json
src/assets/music/: agent00cat.music.json  batcat.music.json  carrambacat.music.json  catbuster.music.json  commandocat.music.json  darkcat.music.json  darthcat.music.json  doomcat.music.json  game_loop.music.json  game_over.music.json  ghostcat.music.json  harrypurrter.music.json  impawsiblecat.music.json  indicat.music.json  iron_cat.music.json  jawscat.music.json  kotan_the_destroyer.music.json  little_one_theme.music.json  main_theme.music.json  pinkpawther.music.json  punishcat.music.json  robocat.music.json  rockpaw.music.json  samurcat.music.json  scarcat.music.json  silverpaw.music.json  termicator.music.json  zombocat.music.json
src/assets/music/midi/: agent00cat.mid  carrambacat.mid  catbuster.mid  darthcat.mid  doomcat.mid  harrypurrter.mid  impawsiblecat.mid  indicat.mid  jawscat.mid  pinkpawther.mid  rockpaw.mid  scarcat.mid  termicator.mid
src/assets/sfx/: boar_death.sfx.json  cat_unlock.sfx.json  damage.sfx.json  death.sfx.json  enemy_death_1.sfx.json  enemy_death_2.sfx.json  enemy_death_3.sfx.json  jump.sfx.json  ork_death.sfx.json  rat_death.sfx.json  smash.sfx.json
src/assets/sprites/effects/: cracked_screen.sprite.json
src/assets/sprites/enemies/: bat.sprite.json  bird.sprite.json  boar.sprite.json  body_1.sprite.json  body_2.sprite.json  body_3.sprite.json  body_4.sprite.json  eyes_1.sprite.json  eyes_2.sprite.json  eyes_3.sprite.json  (+11 more)
src/audio/: audio.c  audio.h  generated_music.c  generated_music.h  generated_sound.c  generated_sound.h  music_definition.h  music_generator.c  music_generator.h  music_registry.c  music_registry.h  sound_definition.h  sound_generator.c  sound_generator.h  sound_registry.c  sound_registry.h
src/config/: background_config.c  background_config.h  enemy_config.c  enemy_config.h  foreground_decoration_config.c  foreground_decoration_config.h  obstacle_config.c  obstacle_config.h  player_config.c  player_config.h  powerup_config.c  powerup_config.h  threat_config.c  threat_config.h
src/entity/: entity.c  entity.h  entity_animation.c  entity_animation.h  entity_config.h
src/feedback/: game_feedback.c  game_feedback.h  screen_shake.c  screen_shake.h
src/font/: font_renderer.h
src/fonts/: font_renderer.c  font_renderer.h  fonts_packed.c  fonts_packed.h
src/game/: cat_profile.c  cat_profile.h  game.c  game.h  game_effects.c  game_effects.h  game_settings.h  progression.c  progression.h
src/input/: input.c
src/localization/: localization.c  localization.h
src/platform/: platform_android.c  platform_android.h
src/renderer/: renderer.c  renderer.h
src/settings/: game_settings.c  game_settings.h
src/sprites/: generated_sprite.c  generated_sprite.h  sprite_command.h  sprite_definition.h  sprite_registry.c  sprite_registry.h
src/sprites/animations/: animation_definition.h  animation_evaluate.c  animation_evaluate.h  animations.c
src/sprites/definitions/: bg_forest.sprite.c  bg_forest.sprite.json  bg_mountains.sprite.c  bg_mountains.sprite.json  boar.sprite.c  boar.sprite.json  fg_bushes.sprite.c  fg_bushes.sprite.json  ground_grass.sprite.c  ground_grass.sprite.json  ork.sprite.c  ork.sprite.json  player.sprite.c  player.sprite.json  rat.sprite.c  rat.sprite.json  rock.sprite.c  rock.sprite.json  sprites_packed.c  sprites_packed.h  stump.sprite.c  stump.sprite.json
src/ui/: hud.c  hud.h  menu.c  menu.h  ui_controls.c  ui_controls.h
tools/: pack_animations.py  pack_fonts.py  pack_music.py  pack_sfx.py  pack_sprites.py  unify_sprite_colors.py
(+67 files in other folders)
